# SuperPS2

./: build.gradle.kts  gradle.properties  settings.gradle.kts
app/: CMakeLists.txt  build.gradle  build.gradle.kts
app/src/androidTest/java/com/superps2/emu/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  EmuBridge.cpp  common.h  native-lib.cpp
app/src/main/cpp/audio/: CMakeLists.txt  spu2.cpp  spu2.h
app/src/main/cpp/common/: CMakeLists.txt  memory.cpp
app/src/main/cpp/core/: CMakeLists.txt  ps2_core.cpp  ps2_core.h
app/src/main/cpp/cpu/: CMakeLists.txt  ee_core.cpp
app/src/main/cpp/emulation/: CMakeLists.txt  ps2core.cpp  ps2core.h
app/src/main/cpp/emulation/bios/: bios.cpp  bios.h
app/src/main/cpp/emulation/cdvd/: cdvd.cpp  cdvd.h
app/src/main/cpp/emulation/cheats/: cheat.cpp  cheat.h
app/src/main/cpp/emulation/controllers/: pad.cpp  pad.h
app/src/main/cpp/emulation/cpu/: cop0.cpp  cop0.h  ee_core.cpp  ee_core.h
app/src/main/cpp/emulation/dma/: dma.cpp  dma.h
app/src/main/cpp/emulation/ee/: interrupt.cpp  interrupt.h  memory.cpp  memory.h
app/src/main/cpp/emulation/ee/cop0/: cop0.cpp  cop0.h
app/src/main/cpp/emulation/ee/cpu/: decoder.cpp  decoder.h  ee_core.cpp  ee_core.h  gpr.cpp  gpr.h  interpreter.cpp  interpreter.h  pc.cpp  pc.h
app/src/main/cpp/emulation/ee/dma/: dmac.cpp  dmac.h
app/src/main/cpp/emulation/ee/memory/: mem_mainram.cpp  mem_mainram.h  memory.cpp  memory.h  mmio.cpp  mmio.h  ram.cpp  ram.h
app/src/main/cpp/emulation/ee/vu/: vu0.cpp  vu0.h  vu1.cpp  vu1.h
app/src/main/cpp/emulation/gif/: gif.cpp  gif.h
app/src/main/cpp/emulation/gs/: gif.cpp  gif.h  gs.cpp  gs.h  gs_packet_decoder.cpp  gs_packet_decoder.h  gs_pipeline.cpp  gs_pipeline.h
app/src/main/cpp/emulation/gs/renderer/: vertex_buffer.cpp  vertex_buffer.h
app/src/main/cpp/emulation/input/: input_manager.cpp  input_manager.h
app/src/main/cpp/emulation/iop/: iop.cpp  iop.h
app/src/main/cpp/emulation/memory/: memory.cpp  memory.h
app/src/main/cpp/emulation/memorycard/: memorycard.cpp  memorycard.h
app/src/main/cpp/emulation/options/: engine_options.cpp  engine_options.h
app/src/main/cpp/emulation/scratchpad/: scratchpad.cpp  scratchpad.h
app/src/main/cpp/emulation/spu2/: spu2.cpp  spu2.h
app/src/main/cpp/emulation/state/: state.cpp  state.h
app/src/main/cpp/emulation/vif/: vif.cpp  vif.h
app/src/main/cpp/emulation/vu0/: vu0.cpp  vu0.h
app/src/main/cpp/emulation/vu1/: vu1.cpp  vu1.h
app/src/main/cpp/gpu/: CMakeLists.txt  gl_renderer.cpp
app/src/main/cpp/graphics/: CMakeLists.txt  gl_renderer.cpp  gl_renderer.h
app/src/main/cpp/include/: mmio.h
app/src/main/cpp/input/: ps2input.cpp  ps2input.h
app/src/main/cpp/jni/: CMakeLists.txt  MemoryCardBridge.cpp  StateBridge.cpp  emulator_bridge.cpp  input_bridge.cpp  native-audio-bridge.cpp  ps2_jni_bridge.cpp  ps2_jni_bridge.h
app/src/main/cpp/osd/: osd.cpp  osd.h
app/src/main/cpp/ps2engine/: CMakeLists.txt  ps2engine.cpp  ps2engine.h
app/src/main/cpp/renderer/: ps2renderer.cpp  ps2renderer.h  renderer.cpp  renderer.h  renderer_jni.cpp
app/src/main/cpp/spu2/: CMakeLists.txt
app/src/main/cpp/utils/: CMakeLists.txt
app/src/main/java/com/example/superps2/: RendererBridge.java
app/src/main/java/com/example/superps2/ui/: GameBootActivity.java  GameView.java  LoadingActivity.java
app/src/main/java/com/superps2/: MainActivity.kt  SuperPS2App.kt
app/src/main/java/com/superps2/emu/: EmulatorBridge.java  EmulatorBridge.kt  MainActivity.kt  NativeAudio.kt  SettingsActivity.kt
app/src/main/java/com/superps2/emu/adapter/: GameAdapter.kt
app/src/main/java/com/superps2/emu/audio/: AudioManager.kt
app/src/main/java/com/superps2/emu/core/: EngineSettingsBridge.kt  ISOManager.kt  InputBridge.kt  MemoryCardBridge.kt  NativeAudio.kt  NativeBridge.kt  NativeInput.kt  OSDBridge.kt  PS2Bridge.kt  StateBridge.kt
app/src/main/java/com/superps2/emu/graphics/: GLGameView.kt  GLRenderer.kt
app/src/main/java/com/superps2/emu/input/: InputManager.kt
app/src/main/java/com/superps2/emu/jni/: AudioManager.kt  NativeInput.kt  PS2Bridge.kt
app/src/main/java/com/superps2/emu/loader/: IsoLoader.kt
app/src/main/java/com/superps2/emu/memorycard/: MemoryCardManager.kt
app/src/main/java/com/superps2/emu/model/: GameFile.kt
app/src/main/java/com/superps2/emu/osd/: OSDManager.kt
app/src/main/java/com/superps2/emu/state/: StateManager.kt
app/src/main/java/com/superps2/emu/ui/: LoadingActivity.kt  MainActivity.kt  NavigationActivity.kt  SettingsActivity.kt  (+1 more)
app/src/main/java/com/superps2/ui/: SplashActivity.kt
app/src/main/java/com/superps2/util/: DeviceInfo.kt  Logger.kt
app/src/main/res/drawable/: analog_stick_bg.xml  bg_boot_gradient.xml  btn_circle.xml  btn_dpad_down.xml  btn_dpad_left.xml  btn_dpad_right.xml  btn_dpad_up.xml  btn_select.xml  btn_square.xml  btn_start.xml  btn_triangle.xml  btn_x.xml  button_background.xml  dpad_button_background.xml  ic_analog_thumb.xml  ic_button_circle.xml  ic_button_cross.xml  ic_button_square.xml  ic_button_triangle.xml  ic_button_x.xml  ic_dpad_down.xml  ic_game_placeholder.xml  ic_launcher.xml  ic_launcher_foreground.xml  ic_ps2_logo.xml  osd_background.xml  splash_background.xml
app/src/main/res/layout/: activity_emulation.xml  activity_game_boot.xml  activity_loading.xml  activity_main.xml  activity_navigation.xml  activity_settings.xml  activity_splash.xml  emulation_overlay_view.xml  fragment_game_settings.xml  fragment_home.xml  fragment_memory_card.xml  fragment_settings.xml  fragment_states.xml  item_game.xml  item_iso_game.xml  nav_header.xml  overlay_controls.xml  overlay_emulation.xml  overlay_osd.xml
app/src/main/res/menu/: drawer_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_adaptive.xml  ic_launcher_foreground.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/com/superps2/emu/: ExampleUnitTest.kt
(+13 files in other folders)
